fix - updating the background styling behind the input component

--- a/src/components/Body/Body.module.scss
+++ b/src/components/Body/Body.module.scss
@@ -1,16 +1,25 @@
 @import "./../../variables.scss";
 
+.body::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: $white;
+    width: 100%;
+    height: 6rem;
+
+    @media only screen and (min-width: $bp-md) {
+        height: 3rem;
+    }
+}
+
 .body {
     background-color: $grey;
-    padding-top: 4rem;
     padding-bottom: 10rem;
 
     position: relative;
-
-    @media only screen and (min-width: $bp-md) {
-        padding-top: 4rem;
-    }
-
     &__header {
         text-align: center;
         padding: 5rem 0;
