--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -2,8 +2,7 @@
 
 header {
     text-align: center;
-    padding-top: 2.5rem;
-    padding-bottom: 10rem;
+    padding: 7rem 0;
     max-width: 30rem;
     margin: 0 auto;
 
